Updated README with ARIMA images

--- a/Final_Project_Jared.ipynb
+++ b/Final_Project_Jared.ipynb
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "15db9b77",
+   "id": "b3719aac",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "ef5b3e01",
+   "id": "303bf7f5",
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ab7baa7",
+   "id": "439a2c48",
    "metadata": {},
    "source": [
     "#### ARIMA (8,1,0)"
@@ -585,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "00be7b86",
+   "id": "f663bffe",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "1ed98a95",
+   "id": "a308574e",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "7219705c",
+   "id": "e4e931d4",
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "4dcda2b9",
+   "id": "88222b88",
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "8a475836",
+   "id": "59562024",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "2d907809",
+   "id": "47a17f06",
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "5eacbf7f",
+   "id": "c0c6633e",
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "6c032973",
+   "id": "79e35f8f",
    "metadata": {
     "scrolled": true
    },
@@ -1154,7 +1154,15 @@
       " ARIMA(3,0,1)(0,0,0)[0] intercept   : AIC=670130.373, Time=43.41 sec\n",
       " ARIMA(3,0,0)(0,0,0)[0] intercept   : AIC=671564.356, Time=2.72 sec\n",
       " ARIMA(4,0,1)(0,0,0)[0] intercept   : AIC=670090.195, Time=58.31 sec\n",
-      " ARIMA(4,0,0)(0,0,0)[0] intercept   : AIC=670954.866, Time=3.33 sec\n"
+      " ARIMA(4,0,0)(0,0,0)[0] intercept   : AIC=670954.866, Time=3.33 sec\n",
+      " ARIMA(5,0,1)(0,0,0)[0] intercept   : AIC=670022.290, Time=70.21 sec\n",
+      " ARIMA(5,0,0)(0,0,0)[0] intercept   : AIC=670633.464, Time=3.81 sec\n",
+      " ARIMA(6,0,1)(0,0,0)[0] intercept   : AIC=669884.176, Time=89.41 sec\n",
+      " ARIMA(6,0,0)(0,0,0)[0] intercept   : AIC=670327.030, Time=5.01 sec\n",
+      " ARIMA(7,0,1)(0,0,0)[0] intercept   : AIC=669749.086, Time=109.12 sec\n",
+      " ARIMA(7,0,0)(0,0,0)[0] intercept   : AIC=670030.734, Time=5.48 sec\n",
+      " ARIMA(8,0,1)(0,0,0)[0] intercept   : AIC=669619.810, Time=104.57 sec\n",
+      " ARIMA(8,0,0)(0,0,0)[0] intercept   : AIC=669734.585, Time=5.92 sec\n"
      ]
     }
    ],
@@ -1233,7 +1241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "100dfaa2",
+   "id": "086a117e",
    "metadata": {},
    "source": [
     "*Models to build:*\n",
@@ -1249,7 +1257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a667b082",
+   "id": "4283d91a",
    "metadata": {},
    "source": [
     "*Features to include:*\n",
@@ -1264,7 +1272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c521c92e",
+   "id": "fb640f9a",
    "metadata": {},
    "outputs": [],
    "source": []
