--- a/peter_timeseries_sandbox.ipynb
+++ b/peter_timeseries_sandbox.ipynb
@@ -25,7 +25,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data available locally\n"
+      "Data available locally\n",
+      "Processing data\n"
      ]
     }
    ],
