--- a/Final_Project_Jared.ipynb
+++ b/Final_Project_Jared.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 374,
    "id": "addd6df1",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,8 @@
     "from statsmodels.tsa.arima.model import ARIMA\n",
     "from pmdarima.arima import auto_arima\n",
     "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
-    "import time"
+    "import time\n",
+    "# import retrieval_311"
    ]
   },
   {
@@ -872,17 +873,17 @@
   {
    "cell_type": "code",
    "execution_count": 372,
-   "id": "2e9443de",
+   "id": "47bb1d84",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Need to convert this to using Peter's script"
+    "# Need to convert this to using Peter's script\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 371,
-   "id": "e6da9dd8",
+   "id": "23f9e7cb",
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1093,7 @@
   {
    "cell_type": "code",
    "execution_count": 337,
-   "id": "cf419ff1",
+   "id": "8e41bd98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1133,7 +1134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "374cf35c",
+   "id": "3d3fa9f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1143,7 +1144,7 @@
   {
    "cell_type": "code",
    "execution_count": 338,
-   "id": "daf98585",
+   "id": "3b1cd622",
    "metadata": {},
    "outputs": [
     {
@@ -1563,7 +1564,7 @@
   {
    "cell_type": "code",
    "execution_count": 339,
-   "id": "8e13b5e6",
+   "id": "77d03cb6",
    "metadata": {},
    "outputs": [
     {
@@ -1597,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": 340,
-   "id": "01bf5f89",
+   "id": "5b170885",
    "metadata": {},
    "outputs": [
     {
@@ -1627,7 +1628,7 @@
   {
    "cell_type": "code",
    "execution_count": 341,
-   "id": "a4589531",
+   "id": "7c28a129",
    "metadata": {},
    "outputs": [
     {
@@ -1657,7 +1658,7 @@
   {
    "cell_type": "code",
    "execution_count": 342,
-   "id": "cdfdebbd",
+   "id": "e594248e",
    "metadata": {},
    "outputs": [
     {
@@ -1678,7 +1679,7 @@
   {
    "cell_type": "code",
    "execution_count": 343,
-   "id": "8052cc4d",
+   "id": "ba0fa9c4",
    "metadata": {},
    "outputs": [
     {
@@ -1815,7 +1816,7 @@
   {
    "cell_type": "code",
    "execution_count": 344,
-   "id": "765750c2",
+   "id": "48bbc0cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1825,7 +1826,7 @@
   {
    "cell_type": "code",
    "execution_count": 346,
-   "id": "eef6aa0b",
+   "id": "9d008d30",
    "metadata": {},
    "outputs": [
     {
@@ -1859,7 +1860,7 @@
   {
    "cell_type": "code",
    "execution_count": 347,
-   "id": "5a5d2580",
+   "id": "e7ff36e7",
    "metadata": {},
    "outputs": [
     {
@@ -1880,7 +1881,7 @@
   {
    "cell_type": "code",
    "execution_count": 370,
-   "id": "5abf0dd2",
+   "id": "51d5ba86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1935,7 +1936,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "71f35020",
+   "id": "1e193d36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2277,7 +2278,7 @@
   {
    "cell_type": "code",
    "execution_count": 237,
-   "id": "710915ee",
+   "id": "1cbd42a6",
    "metadata": {},
    "outputs": [
     {
@@ -2315,7 +2316,7 @@
   {
    "cell_type": "code",
    "execution_count": 254,
-   "id": "9fde618a",
+   "id": "72e870a9",
    "metadata": {},
    "outputs": [
     {
@@ -2347,7 +2348,7 @@
   {
    "cell_type": "code",
    "execution_count": 258,
-   "id": "befd038a",
+   "id": "dac52d7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2357,7 +2358,7 @@
   {
    "cell_type": "code",
    "execution_count": 259,
-   "id": "080b0718",
+   "id": "e1c151e0",
    "metadata": {},
    "outputs": [
     {
@@ -2535,7 +2536,7 @@
   {
    "cell_type": "code",
    "execution_count": 293,
-   "id": "8196b3e9",
+   "id": "e6c07ce7",
    "metadata": {},
    "outputs": [
     {
@@ -2586,7 +2587,7 @@
   {
    "cell_type": "code",
    "execution_count": 294,
-   "id": "75f6fc83",
+   "id": "bc73ee8c",
    "metadata": {},
    "outputs": [
     {
@@ -2608,7 +2609,7 @@
   {
    "cell_type": "code",
    "execution_count": 292,
-   "id": "1d690517",
+   "id": "1ded84e5",
    "metadata": {},
    "outputs": [
     {
@@ -2630,7 +2631,7 @@
   {
    "cell_type": "code",
    "execution_count": 262,
-   "id": "2d65005b",
+   "id": "90997427",
    "metadata": {},
    "outputs": [
     {
@@ -2652,7 +2653,7 @@
   {
    "cell_type": "code",
    "execution_count": 247,
-   "id": "dfa4dce0",
+   "id": "a6634ded",
    "metadata": {},
    "outputs": [
     {
@@ -2675,7 +2676,7 @@
   {
    "cell_type": "code",
    "execution_count": 272,
-   "id": "d113a03d",
+   "id": "1c8b288d",
    "metadata": {
     "scrolled": true
    },
@@ -2699,7 +2700,7 @@
   {
    "cell_type": "code",
    "execution_count": 275,
-   "id": "e2e929c1",
+   "id": "c9bc042c",
    "metadata": {},
    "outputs": [
     {
@@ -2736,7 +2737,7 @@
   {
    "cell_type": "code",
    "execution_count": 290,
-   "id": "4e86df1c",
+   "id": "a6833653",
    "metadata": {},
    "outputs": [
     {
@@ -2787,7 +2788,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5ac2864",
+   "id": "00b8ec99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2806,7 +2807,7 @@
   {
    "cell_type": "code",
    "execution_count": 297,
-   "id": "86e88e47",
+   "id": "14ba5e77",
    "metadata": {},
    "outputs": [
     {
@@ -2951,7 +2952,7 @@
   {
    "cell_type": "code",
    "execution_count": 298,
-   "id": "a27c514f",
+   "id": "f5a59ffa",
    "metadata": {},
    "outputs": [
     {
@@ -2978,7 +2979,7 @@
   {
    "cell_type": "code",
    "execution_count": 307,
-   "id": "b40c7014",
+   "id": "a83bb379",
    "metadata": {},
    "outputs": [
     {
@@ -3000,7 +3001,7 @@
   {
    "cell_type": "code",
    "execution_count": 316,
-   "id": "12fdd14a",
+   "id": "3dfd9be2",
    "metadata": {},
    "outputs": [
     {
@@ -3022,7 +3023,7 @@
   {
    "cell_type": "code",
    "execution_count": 318,
-   "id": "2e6b6e23",
+   "id": "415f8546",
    "metadata": {},
    "outputs": [
     {
@@ -3057,7 +3058,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "319c9a43",
+   "id": "4d1e9f24",
    "metadata": {},
    "outputs": [
     {
@@ -3140,7 +3141,7 @@
   {
    "cell_type": "code",
    "execution_count": 333,
-   "id": "6886948e",
+   "id": "49fa5681",
    "metadata": {},
    "outputs": [
     {
@@ -3170,7 +3171,7 @@
   {
    "cell_type": "code",
    "execution_count": 209,
-   "id": "16b4ac28",
+   "id": "bb7fce1b",
    "metadata": {},
    "outputs": [
     {
@@ -3202,7 +3203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f486a35",
+   "id": "77754b18",
    "metadata": {},
    "source": [
     "# APPENDIX"
