--- a/Jupyter Notebooks/peter_timeseries_sandbox.ipynb
+++ b/Jupyter Notebooks/peter_timeseries_sandbox.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"data/processed_data.csv\")"
+    "df = pd.read_csv(\"../data/processed_data.csv\")"
    ]
   },
   {
